--- a/.env
+++ b/.env
@@ -4,4 +4,7 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password 
 POSTGRES_DB=login-service
 
+MAIL_USER=thanhvo@codelight.co
+MAIL_PASSWORD=gntqwubmaiqfaagm
+
 
