--- a/package.json
+++ b/package.json
@@ -41,15 +41,18 @@
     "google-auth-library": "^8.7.0",
     "googleapis": "^118.0.0",
     "handlebars": "^4.7.7",
+    "nest-winston": "^1.9.1",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.14"
+    "typeorm": "^0.3.14",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
